# movie_publisher-release

./: 0001-Rebase-from-upstream.patch  0001-Removing-imageio-and-moviepy-dependencies-in-indigo-.patch  0001-Removing-imageio-and-moviepy-dependencies-in-kinetic.patch  0001-Removing-imageio-and-moviepy-dependencies-in-melodic.patch  0002-Removing-imageio-and-moviepy-dependencies-in-indigo-.patch  CHANGELOG.rst  CMakeLists.txt  LICENSE  LICENSE.CC-BY-SA-3.0  README.md  debian.store  metadata_composers.xml  package.xml  patches.conf  plugins.xml  releaser_history.json  rosdoc.yaml  rpm.store  tracks.yaml
.github/: ci.melodic.rosinstall  ci.noetic.rosinstall
.github/workflows/: ci.yaml
LICENSES/: LicenseRef-ExiftoolCpp.txt
camera_info_manager_lib/: CHANGELOG.rst  LICENSE  README.md  package.xml
camera_info_manager_lib/include/camera_info_manager_lib/: camera_info_manager.h
camera_info_manager_lib/test/: test-4.2mm.yaml
camera_info_manager_metadata_extractor/: CHANGELOG.rst  CMakeLists.txt  package.xml
camera_info_manager_metadata_extractor/src/: CamInfoManagerMetadataExtractor.h
camera_info_manager_metadata_extractor/test/: test_extractor.cpp
debian/: changelog  control  copyright  gbp.conf  rules
exiftool_metadata_extractor/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosdoc.yaml
exiftool_metadata_extractor/src/: ExiftoolMetadataExtractor.cpp  ExiftoolMetadataExtractor.h
exiftool_metadata_extractor/src/cpp_exiftool/: CMakeLists.txt  LICENSE
exiftool_metadata_extractor/src/cpp_exiftool/inc/: ExifTool.h  ExifToolPipe.h  TagInfo.h
exiftool_metadata_extractor/src/cpp_exiftool/src/: ExifToolPipe.cpp
exiftool_metadata_extractor/test/: test_extractor.cpp
exiv2_metadata_extractor/: CHANGELOG.rst  LICENSE.GPL  README.md  package.xml  plugins.xml
exiv2_metadata_extractor/src/: Exiv2CustomMakernotes.cpp  Exiv2MetadataExtractor.cpp  Exiv2MetadataExtractor.h
exiv2_metadata_extractor/test/: test_extractor.cpp
gpmf_metadata_extractor/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosdoc.yaml
gpmf_metadata_extractor/src/: GPMFMetadataExtractor.cpp  GPMFMetadataExtractor.h
gpmf_metadata_extractor/src/gpmf_parser/: GPMF_bitstream.h  GPMF_common.h  GPMF_parser.c  GPMF_parser.h  GPMF_utils.c  GPMF_utils.h
gpmf_metadata_extractor/test/: test_extractor.cpp
include/movie_publisher/: metadata_cache.h  metadata_manager.h  movie.h  movie_info.h  movie_metadata_processor.h  movie_open_config.h  movie_processor_base.h  movie_reader.h  movie_reader_ros.h  movie_to_bag.h
include/movie_publisher/metadata/: FileMetadataExtractor.h  FilenameMetadataExtractor.h
launch/: movie_publisher.launch
lensfun_metadata_extractor/: CHANGELOG.rst  LICENSE.CC-BY-SA-3.0  package.xml
lensfun_metadata_extractor/src/: LensfunMetadataExtractor.cpp  LensfunMetadataExtractor.h
lensfun_metadata_extractor/test/: test-db.xml  test_extractor.cpp
libexif_metadata_extractor/: CHANGELOG.rst  CMakeLists.txt  package.xml
libexif_metadata_extractor/src/: LibexifMetadataExtractor.cpp
libexif_metadata_extractor/test/: test_extractor.cpp
movie_publisher/: CHANGELOG.rst  CMakeLists.txt  README.md  metadata_plugins.xml  nodelet.xml  package.xml
movie_publisher/include/movie_publisher/: metadata_cache.h  metadata_extractor.h  metadata_manager.h  metadata_type.h  movie_playback_state.h  movie_reader.h  movie_to_bag.h  parsing_utils.h  types.h
movie_publisher/include/movie_publisher/metadata/: ExifBaseMetadataExtractor.h  LibavStreamMetadataExtractor.h
movie_publisher/nodelets/: movie_publisher_nodelet.cpp
movie_publisher/src/: metadata_cache.cpp  metadata_extractor.cpp  metadata_manager.cpp  movie.cpp  movie_open_config.cpp  movie_private.cpp  movie_private.h  movie_processor_base.cpp  movie_reader.cpp  movie_reader_private.h  movie_reader_ros.cpp  movie_to_bag.cpp  parsing_utils.cpp  types.cpp
movie_publisher/src/composers/: OpticalFrameTFComposer.cpp  RollPitchComposer.cpp
movie_publisher/src/metadata/: ExifBaseMetadataExtractor.cpp  FileMetadataExtractor.cpp  FilenameMetadataExtractor.cpp  LibavStreamMetadataExtractor.cpp
movie_publisher/test/: test_movie_publisher_nodelet.cpp  test_movie_reader.cpp
movie_publisher_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
movie_publisher_plugins_copyleft/: CHANGELOG.rst  CMakeLists.txt  package.xml
movie_publisher_plugins_nonfree/: CHANGELOG.rst  package.xml
movie_publisher_plugins_permissive/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.license  package.xml
nodes/: add_movie_to_bag  fix_bag_timestamps  movie_to_bag.cpp
rpm/: ros-indigo-movie-publisher.spec  template.spec
src/: CamInfoManagerMetadataExtractor.cpp  ExiftoolMetadataExtractor.cpp  Exiv2CustomMakernotes.h  Exiv2MetadataExtractor.cpp  GPMFMetadataExtractor.cpp  GPMFMetadataExtractor.h  LensfunMetadataExtractor.cpp  LensfunMetadataExtractor.h  LibexifCustomMakernotes.cpp  LibexifCustomMakernotes.h  LibexifMetadataExtractor.cpp  LibexifMetadataExtractor.h  camera_info_manager.cpp  metadata_manager.cpp  movie.cpp  movie_info.cpp  movie_metadata_processor.cpp  movie_playback_state.cpp  movie_reader_private.cpp  movie_to_bag.cpp
src/composers/: CameraInfoComposer.cpp  CameraIntrinsicsComposer.cpp  CameraNameComposer.cpp  ImuComposer.cpp  OpticalFrameTFComposer.cpp  RollPitchComposer.cpp  ZeroRollPitchTFComposer.cpp
src/cpp_exiftool/: README
src/cpp_exiftool/src/: ExifTool.cpp  TagInfo.cpp
src/gpmf_parser/: GPMF_bitstream.h  GPMF_common.h  GPMF_parser.c
src/metadata/: ExifBaseMetadataExtractor.cpp  LibavStreamMetadataExtractor.cpp
test/: Panasonic_DMC_GX80_LUMIX_G_VARIO_12_32_F3_5_5_6_XGR1606080157_06FX2042462B_.yaml  test-8.4mm.yaml  test.yaml  test_camera_info_manager.cpp  test_extractor.cpp  test_movie_publisher_nodelet.test  test_movie_reader.cpp
