<?xml version="1.0"?>
<!-- SPDX-License-Identifier: BSD-3-Clause -->
<!-- SPDX-FileCopyrightText: Czech Technical University in Prague -->
<package format="3">
  <name>movie_publisher</name>
  <version>3.0.2</version>
  <description>Using a video file as image topic source.</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license file="LICENSE">BSD</license>

  <url type="repository">https://github.com/ctu-vras/movie_publisher</url>
  <url type="bugtracker">https://github.com/ctu-vras/movie_publisher/issues</url>
  <url type="website">https://www.ros.org/wiki/movie_publisher</url>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>compass_conversions</build_depend>
  <build_depend>cras_topic_tools</build_depend>
  <build_depend>ffmpeg-dev</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_transport_codecs</build_depend>
  <build_depend condition="$ROS_DISTRO &gt;= 'noetic'">magic_enum</build_depend>
  <build_depend>muparser</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>compass_conversions</exec_depend>
  <exec_depend>cras_bag_tools</exec_depend>
  <exec_depend>cras_topic_tools</exec_depend>
  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_transport_codecs</exec_depend>
  <exec_depend>muparser</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <depend>compass_msgs</depend>
  <depend>cras_cpp_common</depend>
  <depend>gps_common</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>

  <exec_depend>ffmpeg</exec_depend>
  <exec_depend version_gte="1.0.2">rosbash_params</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>compressed_image_transport</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml" />
    <rosdoc config="rosdoc.yaml" />
    <movie_publisher metadata_plugins="${prefix}/metadata_plugins.xml" />
    <movie_publisher metadata_plugins="${prefix}/metadata_composers.xml" />
  </export>
</package>
